Compressed entity data when sent to the client. Less precise client-side values, but that's alright. Saves a lot of space and allows for a lot more information to be sent.
Added familiarity indicator to animals. Sneak to see it. It will have a white border if the familiarity will no longer decay. It will turn gold when familiarity is maxed out.