@@ -1,5 +1,6 @@
 package com.bioxx.tfc.Entities.Mobs;
 
+import java.nio.ByteBuffer;
 import java.util.ArrayList;
 
 import net.minecraft.entity.Entity;
@@ -163,20 +164,13 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 	@Override
 	protected void entityInit()
 	{
-		super.entityInit();
-		this.dataWatcher.addObject(21, Integer.valueOf(0));
-		this.dataWatcher.addObject(22, Float.valueOf(1.0f));
-		this.dataWatcher.addObject(13, new Integer(0));
-		this.dataWatcher.addObject(14, new Float(1));
-		this.dataWatcher.addObject(15, Integer.valueOf(0));
-
-		this.dataWatcher.addObject(23, Integer.valueOf(0));
-		this.dataWatcher.addObject(24, Float.valueOf(1.0f));
-		this.dataWatcher.addObject(25, Float.valueOf(1.0f));
-		this.dataWatcher.addObject(26, Float.valueOf(1.0f));
-		this.dataWatcher.addObject(27, Float.valueOf(1.0f));
-		this.dataWatcher.addObject(28, Float.valueOf(1.0f));
-		this.dataWatcher.addObject(29, Float.valueOf(1.0f));
+		super.entityInit();	
+		this.dataWatcher.addObject(13, new Integer(0)); //sex (1 or 0)
+		this.dataWatcher.addObject(15, Integer.valueOf(0));		//age
+		
+		this.dataWatcher.addObject(22, Integer.valueOf(0));	//Size, strength, aggression, obedience
+		this.dataWatcher.addObject(23, Integer.valueOf(0));	//Colour, climate, hardiness, familiarity
+		this.dataWatcher.addObject(24, Integer.valueOf(0));	//Happy ticks
 	}
 
 
@@ -307,6 +301,7 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 			setInLove(true);
 
 		syncData();
+		
 		if(isAdult())
 			setGrowingAge(0);
 		else
@@ -317,11 +312,11 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 		if(!this.worldObj.isRemote){
 			if(happyTicks > 0){
 				happyTicks--;
-				this.dataWatcher.updateObject(23, happyTicks);
+				this.dataWatcher.updateObject(24, happyTicks);
 			}
 		}
 		else{
-			this.happyTicks = this.dataWatcher.getWatchableObjectInt(23);
+			this.happyTicks = this.dataWatcher.getWatchableObjectInt(24);
 		}
 
 		if(isPregnant() && !worldObj.isRemote)
@@ -364,27 +359,43 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 		{
 			if(!this.worldObj.isRemote)
 			{
-				this.dataWatcher.updateObject(21, Integer.valueOf(sex));
-				this.dataWatcher.updateObject(22, Float.valueOf(size_mod));
+				this.dataWatcher.updateObject(13, Integer.valueOf(sex));
 
-				this.dataWatcher.updateObject(24, Float.valueOf(strength_mod));
-				this.dataWatcher.updateObject(25, Float.valueOf(aggression_mod));
-				this.dataWatcher.updateObject(26, Float.valueOf(obedience_mod));
-				this.dataWatcher.updateObject(27, Float.valueOf(colour_mod));
-				this.dataWatcher.updateObject(28, Float.valueOf(climate_mod));
-				this.dataWatcher.updateObject(29, Float.valueOf(hard_mod));
+				byte[] values = {
+						TFC_Core.getByteFromSmallFloat(size_mod),
+						TFC_Core.getByteFromSmallFloat(strength_mod),
+						TFC_Core.getByteFromSmallFloat(aggression_mod),
+						TFC_Core.getByteFromSmallFloat(obedience_mod)};
+				byte[] values2 = {
+						TFC_Core.getByteFromSmallFloat(colour_mod),
+						TFC_Core.getByteFromSmallFloat(climate_mod),
+						TFC_Core.getByteFromSmallFloat(hard_mod),
+						(byte)familiarity
+				};
+				this.dataWatcher.updateObject(22, ByteBuffer.wrap(values).getInt());
+				this.dataWatcher.updateObject(23, ByteBuffer.wrap(values2).getInt());
+				this.dataWatcher.updateObject(24, this.happyTicks);
 			}
 			else
 			{
-				sex = this.dataWatcher.getWatchableObjectInt(21);
-				size_mod = this.dataWatcher.getWatchableObjectFloat(22);
-
-				strength_mod = this.dataWatcher.getWatchableObjectFloat(24);
-				aggression_mod = this.dataWatcher.getWatchableObjectFloat(25);
-				obedience_mod = this.dataWatcher.getWatchableObjectFloat(26);
-				colour_mod = this.dataWatcher.getWatchableObjectFloat(27);
-				climate_mod = this.dataWatcher.getWatchableObjectFloat(28);
-				hard_mod = this.dataWatcher.getWatchableObjectFloat(29);
+				sex = this.dataWatcher.getWatchableObjectInt(13);
+				
+				ByteBuffer buf = ByteBuffer.allocate(Long.SIZE / Byte.SIZE);
+				buf.putInt(this.dataWatcher.getWatchableObjectInt(22));
+				buf.putInt(this.dataWatcher.getWatchableObjectInt(23));
+				byte[] values = buf.array();
+				
+				size_mod = TFC_Core.getSmallFloatFromByte(values[0]);
+				strength_mod = TFC_Core.getSmallFloatFromByte(values[1]);
+				aggression_mod = TFC_Core.getSmallFloatFromByte(values[2]);
+				obedience_mod = TFC_Core.getSmallFloatFromByte(values[3]);
+				colour_mod = TFC_Core.getSmallFloatFromByte(values[4]);
+				climate_mod = TFC_Core.getSmallFloatFromByte(values[5]);
+				hard_mod = TFC_Core.getSmallFloatFromByte(values[6]);
+				
+				familiarity = values[7];
+				
+				happyTicks = this.dataWatcher.getWatchableObjectInt(24);
 			}
 		}
 	}
@@ -541,7 +552,6 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 		if(timeOfConception < TFC_Time.getTotalTicks()){
 			timeOfConception = TFC_Time.getTotalTicks();
 			pregnant = true;
-			//targetMate.setGrowingAge (TFC_Settings.dayLength);
 			resetInLove();
 			otherAnimal.setInLove(false);
 			mateSizeMod = otherAnimal.getSize();
@@ -587,7 +597,7 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 	@Override
 	public int getSex()
 	{
-		return dataWatcher.getWatchableObjectInt(21);
+		return dataWatcher.getWatchableObjectInt(13);
 	}
 
 	@Override
@@ -640,10 +650,6 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 			player.addChatMessage(new ChatComponentText(getGender() == GenderEnum.FEMALE ? "Female" : "Male"));
 			if(getGender() == GenderEnum.FEMALE && pregnant)
 				player.addChatMessage(new ChatComponentText("Pregnant"));
-
-			//player.addChatMessage(new ChatComponentText("Health" + this.getHealth() + "/" + this.getMaxHealth()));
-
-			//par1EntityPlayer.addChatMessage("12: "+dataWatcher.getWatchableObjectInt(12)+", 15: "+dataWatcher.getWatchableObjectInt(15));
 		}
 
 		ItemStack itemstack = player.inventory.getCurrentItem();
@@ -681,37 +687,37 @@ public class EntityWolfTFC extends EntityWolf implements IAnimal, IInnateArmor, 
 	@Override
 	public float getStrength()
 	{
-		return this.getDataWatcher().getWatchableObjectFloat(24);
+		return strength_mod;
 	}
 
 	@Override
 	public float getAggression()
 	{
-		return this.getDataWatcher().getWatchableObjectFloat(25);
+		return aggression_mod;
 	}
 
 	@Override
 	public float getObedience()
 	{
-		return this.getDataWatcher().getWatchableObjectFloat(26);
+		return obedience_mod;
 	}
 
 	@Override
 	public float getColour()
 	{
-		return this.getDataWatcher().getWatchableObjectFloat(27);
+		return colour_mod;
 	}
 
 	@Override
 	public float getClimateAdaptation()
 	{
-		return this.getDataWatcher().getWatchableObjectFloat(28);
+		return climate_mod;
 	}
 
 	@Override
 	public float getHardiness()
 	{
-		return this.getDataWatcher().getWatchableObjectFloat(29);
+		return hard_mod;
 	}
 
 	@Override
